// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ribbon/> should render the text correctly 1`] = `
.c0 {
  background-color: #F231A5;
  height: 3.6rem;
  font-size: 1.4rem;
}

<div
  class="c0"
  color="primary"
>
  Best Seller
</div>
`;

exports[`<Ribbon/> should render with primary color 1`] = `
.c0 {
  background-color: #F231A5;
  height: 3.6rem;
  font-size: 1.4rem;
}

<div
  class="c0"
  color="primary"
>
  Best Seller
</div>
`;

exports[`<Ribbon/> should render with secondary color 1`] = `
.c0 {
  background-color: #3CD3C1;
  height: 3.6rem;
  font-size: 1.4rem;
}

<div
  class="c0"
  color="secondary"
>
  Best Seller
</div>
`;

exports[`<Ribbon/> should render with size normal 1`] = `
.c0 {
  background-color: #F231A5;
  height: 3.6rem;
  font-size: 1.4rem;
}

<div
  class="c0"
  color="primary"
>
  Best Seller
</div>
`;

exports[`<Ribbon/> should render with size small 1`] = `
.c0 {
  background-color: #F231A5;
  height: 2.6rem;
  font-size: 1.2rem;
}

<div
  class="c0"
  color="primary"
>
  Best Seller
</div>
`;
